로그인 테스트

--- a/src/main/resources/application-oauth.properties
+++ b/src/main/resources/application-oauth.properties
@@ -1,3 +1,3 @@
-spring.security.oauth2.client.registration.google.client-id=???????ID
-spring.security.oauth2.client.registration.google.client-secret=??????????
+spring.security.oauth2.client.registration.google.client-id=132925547963-361rou1mnd8or34u9anm0j6t5p1q8ama.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret=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
 spring.security.oauth2.client.registration.google.scope=profile,email
