--- a/build.gradle
+++ b/build.gradle
@@ -33,7 +33,7 @@ dependencies {
     implementation('com.h2database:h2')
 
     implementation('org.springframework.boot:spring-boot-starter-oauth2-client')
-    implementation('org.springframework.session:spring-session-jdbc')
+    implementation('org.springframework.session:spring-session-jdbc') //세션 저장소
     testImplementation("org.springframework.security:spring-security-test")
 }
 
